added minutes input

--- a/tTracker.html
+++ b/tTracker.html
@@ -8,7 +8,7 @@
 	<script>
 		PluginTester.Api.Ticket.create().then(function(testTicket){
 			// testTicket.subject.checkIn = new Date(2017, 8, 4, 10, 30)
-			PluginTester('TimeTracker', {checkInField: 'checkIn', checkOutField: 'checkOut', timeWorkedField: 'timeWorked', userField: 'user'}, {ticketId: testTicket.subject._id, showEditor: true})
+			PluginTester('TimeTracker', {checkInField: 'checkIn', checkOutField: 'checkOut', timeWorkedField: 'timeWorked', userField: 'user', dateField: 'date'}, {ticketId: testTicket.subject._id, showEditor: true})
 		}).done()
    	</script>
 </html>
