--- a/tTracker.html
+++ b/tTracker.html
@@ -7,7 +7,7 @@
 	<script src="tTracker.umd.js"></script>
 	<script>
 		PluginTester.Api.Ticket.create().then(function(testTicket){
-			testTicket.subject.checkIn = new Date(2017, 8, 4, 10, 30)
+			// testTicket.subject.subfields.checkIn = new Date(2017, 8, 4, 10, 30)
 			PluginTester('TimeTracker', {timesWorkedField: 'timesWorked', subfields: {checkInField: 'checkIn', checkoutField: 'checkOut', userField: 'user', dateField: 'date', minWorkedField: 'minWorked'}}, {ticketId: testTicket.subject._id, showEditor: true})
 		}).done()
    	</script>
