--- a/tTracker.html
+++ b/tTracker.html
@@ -9,9 +9,9 @@
 		PluginTester.Api.Ticket.create().then(function(testTicket){
 			// testTicket.subject.timesWorked = 'green'
 
-			// PluginTester('TimeTracker', {timesWorkedField: 'timesWorked', subfields: {checkInField: 'checkIn', checkoutField: 'checkOut', userField: 'user', dateField: 'date', minWorkedField: 'minWorked'}}, {ticketId: testTicket.subject._id, showEditor: true})
+			PluginTester('TimeTracker', {timesWorkedField: 'timesWorked', subfields: {checkInField: 'checkIn', checkoutField: 'checkOut', userField: 'user', dateField: 'date', minWorkedField: 'minWorked'}}, {ticketId: testTicket.subject._id, showEditor: true})
 
-			PluginTester('TimeTracker', {timesWorkedField: 'timesWorked'}, {ticketId: testTicket.subject._id, showEditor: true})
+			// PluginTester('TimeTracker', {timesWorkedField: 'timesWorked'}, {ticketId: testTicket.subject._id, showEditor: true})
 		}).done()
    	</script>
 </html>
