--- a/tTracker.html
+++ b/tTracker.html
@@ -10,7 +10,7 @@
 			// testTicket.subject.tempIn = new Date("October 1, 2017 5:55").getTime()
 			testTicket.subject.tempIn = [{nameField: 'demoUser1', inField: new Date('October 30, 2017 12:10').getTime()}]
 
-			PluginTester('TimeTracker', {timesWorkedField: 'timesWorked', subfields: {checkInField: 'checkIn', checkOutField: 'checkOut', userField: 'user', dateField: 'date', minWorkedField: 'minWorked'}, tempInField: 'tempIn', subfields: {nameField: 'name', inField: 'in'}}, {ticketId: testTicket.subject._id, showEditor: true})
+			PluginTester('TimeTracker', {timesWorkedField: 'timesWorked', subfields: {checkInField: 'checkIn', checkOutField: 'checkOut', userField: 'user', dateField: 'date', minWorkedField: 'minWorked', nameField: 'name', inField: 'in', timerInputField: 'timer', durationInputField: 'duration'}, tempInField: 'tempIn', inputField: 'input'}, {ticketId: testTicket.subject._id, showEditor: true})
 		}).done()
    	</script>
 </html>
