update settings code to match settings field

--- a/tTracker.html
+++ b/tTracker.html
@@ -9,10 +9,9 @@
 		PluginTester.Api.Ticket.create().then(function(testTicket){
 			// testTicket.subject.tempIn = new Date("October 1, 2017 5:55").getTime()
 			testTicket.subject.tempIn = [{nameField: 'demoUser1', inField: new Date('October 30, 2017 12:10').getTime()}]
-			testTicket.subject.timer = false
-			testTicket.subject.duration = true
+			testTicket.subject.settingsField = [{workerField: 'demoUser1', timerInputField: true, durationInputField: true}]
 
-			PluginTester('TimeTracker', {timesWorkedField: 'timesWorked', subfields: {checkInField: 'checkIn', checkOutField: 'checkOut', userField: 'user', dateField: 'date', minWorkedField: 'minWorked', nameField: 'name', inField: 'in'}, tempInField: 'tempIn', timerInputField: 'timer', durationInputField: 'duration'}, {ticketId: testTicket.subject._id, showEditor: true})
+			PluginTester('TimeTracker', {timesWorkedField: 'timesWorked', subfields: {checkInField: 'checkIn', checkOutField: 'checkOut', userField: 'user', dateField: 'date', minWorkedField: 'minWorked', nameField: 'name', inField: 'in', workerField: 'worker', timerInputField: 'timer', durationInputField: 'duration'}, tempInField: 'tempIn', settingsField: 'settings'}, {ticketId: testTicket.subject._id, showEditor: true})
 		}).done()
    	</script>
 </html>
