--- a/tTracker.html
+++ b/tTracker.html
@@ -8,10 +8,10 @@
 	<script>
 		PluginTester.Api.Ticket.create().then(function(testTicket){
 			// testTicket.subject.tempIn = new Date("October 1, 2017 5:55").getTime()
-			testTicket.subject.tempIn = [{nameField: 'demoUser1', inField: new Date('October 30, 2017 12:10').getTime()}]
-			testTicket.subject.settings = [{workerField: 'demoUser1', timerInputField: true, durationInputField: false}]
+			// testTicket.subject.tempIn = [{nameField: 'demoUser1', inField: new Date('October 30, 2017 12:10').getTime()}]
+			// testTicket.subject.settings = [{nameField: 'demoUser1', timerInputField: true, durationInputField: false, inField: new Date('October 30, 2017 12:10').getTime()}]
 
-			PluginTester('TimeTracker', {timesWorkedField: 'timesWorked', subfields: {checkInField: 'checkIn', checkOutField: 'checkOut', userField: 'user', dateField: 'date', minWorkedField: 'minWorked', nameField: 'name', inField: 'in', workerField: 'worker', timerInputField: 'timer', durationInputField: 'duration'}, tempInField: 'tempIn', settingsField: 'settings'}, {ticketId: testTicket.subject._id, showEditor: true})
+			PluginTester('TimeTracker', {timesWorkedField: 'timesWorked', subfields: {checkInField: 'checkIn', checkOutField: 'checkOut', userField: 'user', dateField: 'date', minWorkedField: 'minWorked', nameField: 'name', inField: 'in', timerInputField: 'timer', durationInputField: 'duration'}, settingsField: 'settings'}, {ticketId: testTicket.subject._id, showEditor: true})
 		}).done()
    	</script>
 </html>
